--- a/src/python3_course_for_devs/notebooks/function.ipynb
+++ b/src/python3_course_for_devs/notebooks/function.ipynb
@@ -221,7 +221,7 @@
     }
    ],
    "source": [
-    "add = lambda x, y: x + y\n",
+    "add = lambda x, y: x + y  # noqa: E731\n",
     "\n",
     "add(1, 2)"
    ]
