--- a/src/python3_course_for_devs/notebooks/decorator.ipynb
+++ b/src/python3_course_for_devs/notebooks/decorator.ipynb
@@ -6,19 +6,28 @@
    "source": [
     "# 装饰器\n",
     "\n",
-    "装饰器本质上是一个函数，它接受一个函数作为输入，并返回一个新的函数作为输出。这个新的函数通常会在调用原始函数之前或之后执行一些额外的操作。\n"
+    "装饰器本质上是一个函数/类，它接受一个函数/类作为输入，并返回一个新的函数/类作为输出。这个新的函数/类通常会在调用原始函数/类之前或之后执行一些额外的操作。\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**装饰器函数**\n"
+    "**定义装饰器函数**\n",
+    "\n",
+    "通过 `*args` 和 `**kwargs` 分别将位置参数和关键字参数收集成元组和集合。\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "使用装饰器函数装饰一个函数。\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +45,7 @@
        "'meta'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,8 +71,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "将装饰器函数作为闭包函数返回。\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +97,7 @@
        "'meta'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,57 +129,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**装饰器类**\n"
+    "使用装饰器函数装饰一个类。\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calling function: add\n",
-      "Function add finished execution\n",
-      "5\n"
-     ]
-    }
-   ],
-   "source": [
-    "class LogDecorator:\n",
-    "    def __init__(self, fn):\n",
-    "        self.fn = fn\n",
-    "\n",
-    "    def __call__(self, *args, **kwargs):\n",
-    "        print(f\"Calling function: {self.fn.__name__}\")\n",
-    "        ret = self.fn(*args, **kwargs)\n",
-    "        print(f\"Function {self.fn.__name__} finished execution\")\n",
-    "        return ret\n",
-    "\n",
-    "\n",
-    "@LogDecorator\n",
-    "def add(a, b):\n",
-    "    return a + b\n",
-    "\n",
-    "\n",
-    "result = add(2, 3)\n",
-    "print(result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Initializing DecoratedClass\n",
-      "Executing original_method\n",
-      "Executing decorated_method\n"
+      "初始化装饰器类\n",
+      "调用类实例方法\n",
+      "调用装饰方法\n"
      ]
     }
    ],
@@ -173,12 +153,12 @@
     "    class DecoratedClass(cls):\n",
     "        def __init__(self, *args, **kwargs):\n",
     "            # 在实例化新的类之前执行的操作\n",
-    "            print(\"Initializing DecoratedClass\")\n",
+    "            print(\"初始化装饰器类\")\n",
     "            super().__init__(*args, **kwargs)\n",
     "\n",
     "        def decorated_method(self):\n",
     "            # 在装饰的方法中执行的操作\n",
-    "            print(\"Executing decorated_method\")\n",
+    "            print(\"调用装饰方法\")\n",
     "\n",
     "    return DecoratedClass\n",
     "\n",
@@ -189,7 +169,7 @@
     "        self.value = value\n",
     "\n",
     "    def original_method(self):\n",
-    "        print(\"Executing original_method\")\n",
+    "        print(\"调用类实例方法\")\n",
     "\n",
     "\n",
     "# 实例化装饰过的类\n",
@@ -200,6 +180,107 @@
     "\n",
     "# 调用装饰方法\n",
     "decorated_instance.decorated_method()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**定义装饰器类**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "使用装饰器类装饰一个函数。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "调用函数：add\n",
+      "函数 add 调用完成\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "class DecoratorClass:\n",
+    "    def __init__(self, fn):\n",
+    "        self.fn = fn\n",
+    "\n",
+    "    def __call__(self, *args, **kwargs):\n",
+    "        print(f\"调用函数：{self.fn.__name__}\")\n",
+    "        ret = self.fn(*args, **kwargs)\n",
+    "        print(f\"函数 {self.fn.__name__} 调用完成\")\n",
+    "        return ret\n",
+    "\n",
+    "\n",
+    "@DecoratorClass\n",
+    "def add(a, b):\n",
+    "    return a + b\n",
+    "\n",
+    "\n",
+    "result = add(2, 3)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "使用装饰器类装饰一个类。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "创建一个原始类实例\n",
+      "原始类初始化\n",
+      "原始类实例创建完成\n"
+     ]
+    }
+   ],
+   "source": [
+    "class DecoratorClass:\n",
+    "    def __init__(self, original_class):\n",
+    "        self.original_class = original_class\n",
+    "\n",
+    "    def __call__(self, *args, **kwargs):\n",
+    "        print(\"创建一个原始类实例\")\n",
+    "        instance = self.original_class(*args, **kwargs)\n",
+    "        print(\"原始类实例创建完成\")\n",
+    "        return instance\n",
+    "\n",
+    "\n",
+    "@DecoratorClass\n",
+    "class DecoratedClass:\n",
+    "    def __init__(self):\n",
+    "        print(\"原始类初始化\")\n",
+    "\n",
+    "\n",
+    "instance = DecoratedClass()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "可以看到，当装饰器装饰一个函数的时候，这个装饰器接收的参数就是这个函数，而当装饰器装饰一个类的时候，这个装饰器接收的参数就是这个类。\n",
+    "因此当一个装饰器既能装饰函数又能装饰类的时候，需要判断装饰器接收参数的类型，再针对不同类型做不同的装饰处理。\n"
    ]
   }
  ],
@@ -219,7 +300,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
